Particle hair root not sticking to mesh when converted from curves #106155

Closed
opened 2023-03-26 18:16:58 +02:00 by Ryan-Kitagawa · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.1.230305

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: (newest version of Blender that worked as expected)

Short description of error
When I make a groom using the new curves system, and then convert it to a particle system for simulation, the hair will fall through the mesh as if the point of attachment is some arbitrary location not at the root of each hair.

Exact steps for others to reproduce the error
Add empty hair to any mesh. Add a few hairs. Convert to particle system. Turn on hair dynamics. Hairs should look like they aren't attached to the mesh when you press play.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.1.230305 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: (newest version of Blender that worked as expected) **Short description of error** When I make a groom using the new curves system, and then convert it to a particle system for simulation, the hair will fall through the mesh as if the point of attachment is some arbitrary location not at the root of each hair. **Exact steps for others to reproduce the error** Add empty hair to any mesh. Add a few hairs. Convert to particle system. Turn on hair dynamics. Hairs should look like they aren't attached to the mesh when you press play.
Ryan-Kitagawa added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-26 18:16:59 +02:00
Iliya Katushenock added the
Interest
Nodes & Physics
label 2023-03-26 18:20:16 +02:00
Member

Thanks for the report. I can redo this issue locally.
Guess similar report exists already but couldn't find it.

Thanks for the report. I can redo this issue locally. Guess similar report exists already but couldn't find it.
Pratik Borhade added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-29 08:52:07 +02:00
Member

Note: 108198 makes this crash atm. in main.

Note: 108198 makes this crash atm. in main.
Member

Made a patch for the conversion (it was missing assigning weights), note though that existing files cannot be converted (except with scripting), but once the patch lands, new conversion should work better.

Made a patch for the conversion (it was missing assigning weights), note though that existing files cannot be converted (except with scripting), but once the patch lands, new conversion should work better.
Philipp Oeser self-assigned this 2023-06-06 12:58:32 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-07 14:49:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106155
No description provided.